トップページ更新

--- a/cypress.html
+++ b/cypress.html
@@ -68,7 +68,7 @@
 						</ul>
 						<h4>Tasks: 今後の機能追加予定や既知の不具合など</h4>
 						<ul>
-							<li><a href="https://www.wunderlist.com/list/149643128">Cypress Tasks</a>（外部サービス Wunder list にて）</li>
+							<li><a href="https://github.com/miramiku/Cypress/issues">Cypress Issues</a></li>
 						</ul>
 						<h4>Consideration: 留意事項</h4>
 						<ul>
@@ -84,7 +84,7 @@
 							</li>
 							<li>メールアドレス：<img src="images/mail.png" alt="">（画像です）</li>
 						</ul>
-						<h4>History: 変更履歴</h4>
+						<h4>History: 主な変更履歴</h4>
 						<ul>
 							<li>[2015-03-16] 「使い方を挿入」ボタンを追加しました</li>
 							<li>[2015-03-06] 装備種別「マント」を「外套」に変更（ゲーム内の用語と異なっていたため）</li>
