--- a/index.html
+++ b/index.html
@@ -84,14 +84,17 @@
 							</li>
 							<li>メールアドレス：<img src="images/mail.png" alt="">（画像です）</li>
 						</ul>
+						<h4>Resources: リソース情報</h4>
+						<ul>
+							<li>Ripository: <a href="https://github.com/miramiku/Cypress">miramiku/Cypress (GitHub)</a></li>
+							<li>Processed Database: <a href="https://dl.dropboxusercontent.com/u/6164477/wizon/cypress/equipment.json">equipment.json</a></li>
+							<li>OriginalDatabase: <a href="https://onedrive.live.com/redir?page=view&resid=716B8A626FB713C5!2012&authkey=!AN5inIkYaDGbvAE">equipment.db.xlsm (Read only)</a></li>
+						</ul>
 						<h4>History: 主な変更履歴</h4>
 						<ul>
 							<li>[2015-03-25] サイトの URL を変更</li>
 							<li>[2015-03-16] 「使い方を挿入」ボタンを追加しました</li>
-							<li>[2015-03-06] 装備種別「マント」を「外套」に変更（ゲーム内の用語と異なっていたため）</li>
-							<li>[2015-03-03] データベースの一部仕様変更と矢・銃弾対応及びデータ追加</li>
-							<li>[2015-02-28] 装飾品の装備データに耐久・硬度の項目を表示しないように修正</li>
-							<li>[2015-02-27] 公開</li>
+							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Major-Changes">(GitHub) Cypress wiki 主な変更履歴</a></li>
 						</ul>
 						<h4>Advanced usage: 高度な使い方（かなり高度です＞＜；）</h4>
 						<ul>
