--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<ul>
 							<li>Ripository: <a href="https://github.com/miramiku/Cypress">miramiku/Cypress (GitHub)</a></li>
 							<li>Processed Database: <a href="https://dl.dropboxusercontent.com/u/6164477/wizon/cypress/equipment.json">equipment.json</a></li>
-							<li>OriginalDatabase: <a href="https://onedrive.live.com/redir?page=view&resid=716B8A626FB713C5!2012&authkey=!AN5inIkYaDGbvAE">equipment.db.xlsm (Read only)</a></li>
+							<li>Original Database: <a href="https://onedrive.live.com/redir?page=view&amp;resid=716B8A626FB713C5!2012&amp;authkey=!AN5inIkYaDGbvAE">equipment.db.xlsm (Read only)</a></li>
 						</ul>
 						<h4>History: 主な変更履歴</h4>
 						<ul>
