--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<!-- scripts -->
 <!--
-	<script src="features/cypress.retrieval.js"></script>
+	<script src="features/cypress.retrieval.min.js"></script>
 -->
 	<script src="features/jquery.min.js"></script>
 	<script src="features/slidebars.min.js"></script>
@@ -18,7 +18,7 @@
 	<script src="features/icheck.min.js"></script>
 	<script src="features/colorbox.min.js"></script>
 	<script src="features/cypress.core.js"></script>
-	<script src="features/cypress.retrieval-dev.js"></script>
+	<script src="features/cypress.retrieval.js"></script>
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
