css によるリボンを廃止して画像化

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 			</div>
 		</div>
 		<span id="search-request-title">検索条件</span>
+		<span id="tool-commentary"></span>
 	</header>
 
 	<div id="container" class="sb-site">
 		<div id="equipments">
 			<div id="usage" class="equipment-card">
-				<div class="equipment-card-inner">
-					<span class="ribbon usage"></span>
+				<div class="equipment-card-inner usage">
 					<div id="landing-title">
 						Cypress - wizardry online equipment retrieval system
 					</div>
@@ -86,7 +86,7 @@
 						</ul>
 						<h4>Resources: リソース情報</h4>
 						<ul>
-							<li>Ripository: <a href="https://github.com/miramiku/Cypress">miramiku/Cypress (GitHub)</a></li>
+							<li><img src="images/github-icon.png" alt="github repository"> Ripository: <a href="https://github.com/miramiku/Cypress">miramiku/Cypress</a></li>
 							<li>Processed Database: <a href="https://dl.dropboxusercontent.com/u/6164477/wizon/cypress/equipment.json">equipment.json</a></li>
 							<li>Original Database: <a href="https://onedrive.live.com/redir?page=view&amp;resid=716B8A626FB713C5!2012&amp;authkey=!AN5inIkYaDGbvAE">equipment.db.xlsm (Read only)</a></li>
 						</ul>
