--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 	<script src="features/jquery.min.js"></script>
 	<script src="features/slidebars.min.js"></script>
 	<script src="features/ion.rangeSlider.min.js"></script>
-	<script src="features/icheck.min.js"></script>
 	<script src="features/colorbox.min.js"></script>
+	<script src="features/icheck.min.js"></script>
+	<script src="features/zeroclipboard.min.js"></script>
 	<script src="features/cypress.core.js"></script>
 	<script src="features/cypress.retrieval.js"></script>
 
