コピー機能完成

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 						</ul>
 						<h4>History: 主な変更履歴</h4>
 						<ul>
+							<li>[2015-04-09] 鍛錬シミュレートと装備データのコピー機能を追加</li>
 							<li>[2015-03-25] サイトの URL を変更</li>
 							<li>[2015-03-16] 「使い方を挿入」ボタンを追加しました</li>
 							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Major-Changes">(GitHub) Cypress wiki 主な変更履歴</a></li>
