--- a/index.html
+++ b/index.html
@@ -9,16 +9,7 @@
 	<meta name="Author" content="miku">
 
 	<!-- scripts -->
-	<script src="features/cypress.retrieval.js"></script>
-<!--
-	<script src="features/jquery.min.js"></script>
-	<script src="features/slidebars.min.js"></script>
-	<script src="features/ion.rangeSlider.min.js"></script>
-	<script src="features/icheck.min.js"></script>
-	<script src="features/colorbox.min.js"></script>
-	<script src="features/cypress.core.js"></script>
-	<script src="features/cypress.retrieval-dev.js"></script>
--->
+	<script src="features/cypress.retrieval.min.js"></script>
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
@@ -38,13 +29,13 @@
 			</div>
 		</div>
 		<span id="search-request-title">検索条件</span>
+		<span id="tool-commentary"></span>
 	</header>
 
 	<div id="container" class="sb-site">
 		<div id="equipments">
 			<div id="usage" class="equipment-card">
-				<div class="equipment-card-inner">
-					<span class="ribbon usage"></span>
+				<div class="equipment-card-inner usage">
 					<div id="landing-title">
 						Cypress - wizardry online equipment retrieval system
 					</div>
@@ -86,12 +77,13 @@
 						</ul>
 						<h4>Resources: リソース情報</h4>
 						<ul>
-							<li>Ripository: <a href="https://github.com/miramiku/Cypress">miramiku/Cypress (GitHub)</a></li>
+							<li><img src="images/github-icon.png" alt="github repository"> Ripository: <a href="https://github.com/miramiku/Cypress">miramiku/Cypress</a></li>
 							<li>Processed Database: <a href="https://dl.dropboxusercontent.com/u/6164477/wizon/cypress/equipment.json">equipment.json</a></li>
 							<li>Original Database: <a href="https://onedrive.live.com/redir?page=view&amp;resid=716B8A626FB713C5!2012&amp;authkey=!AN5inIkYaDGbvAE">equipment.db.xlsm (Read only)</a></li>
 						</ul>
 						<h4>History: 主な変更履歴</h4>
 						<ul>
+							<li>[2015-04-09] 鍛錬シミュレートと装備データのコピー機能を追加</li>
 							<li>[2015-03-25] サイトの URL を変更</li>
 							<li>[2015-03-16] 「使い方を挿入」ボタンを追加しました</li>
 							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Major-Changes">(GitHub) Cypress wiki 主な変更履歴</a></li>
