スクリプトのソースにバージョン番号付与と Chrome/Firefox に関する言及を削除

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="Author" content="miku">
 
 	<!-- scripts -->
-	<script src="features/cypress.retrieval.min.js"></script>
+	<script src="features/cypress.retrieval.min.js?ver=1.2.2"></script>
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
@@ -63,9 +63,7 @@
 						</ul>
 						<h4>Consideration: 留意事項</h4>
 						<ul>
-							<li>Google Chrome に合わせて設計しています</li>
 							<li>Internet Explorer では表示するデータの件数が多くなると表示にかなり時間がかかります（数十秒程度）</li>
-							<li>Mozilla Firefox ではボタンのグラデーションがきれいに描写されません</li>
 						</ul>
 						<h4>Contact: 連絡先</h4>
 						<ul>
