--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<!-- scripts -->
 <!--
-	<script src="features/cypress.retrieval.min.js"></script>
+	<script src="features/cypress.retrieval.min.js?ver=1.2.3"></script>
 -->
 	<script src="features/jquery.min.js"></script>
 	<script src="features/slidebars.min.js"></script>
@@ -73,9 +73,7 @@
 						</ul>
 						<h4>Consideration: 留意事項</h4>
 						<ul>
-							<li>Google Chrome に合わせて設計しています</li>
 							<li>Internet Explorer では表示するデータの件数が多くなると表示にかなり時間がかかります（数十秒程度）</li>
-							<li>Mozilla Firefox ではボタンのグラデーションがきれいに描写されません</li>
 						</ul>
 						<h4>Contact: 連絡先</h4>
 						<ul>
