プレースホルダの前景色が IE だけ正しく表示されていないスタイルの問題を修正

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 						<ul>
 							<li><a href="https://github.com/miramiku/Cypress/issues">Cypress Issues</a></li>
 						</ul>
-						<h4>Consideration: 留意事項</h4>
+						<h4>Consideration: 動作情報</h4>
 						<ul>
 							<li>Internet Explorer では表示するデータの件数が多くなると表示にかなり時間がかかります（数十秒程度）</li>
 						</ul>
-						<h4>Contact: 連絡先</h4>
+						<h4>Contact: コンタクト</h4>
 						<ul>
 							<li>ソウルネーム： みくε（アルバロア）</li>
 							<li>Twitter:
@@ -85,7 +85,7 @@
 						</ul>
 						<h4>Resources: リソース情報</h4>
 						<ul>
-							<li><img src="images/github-icon.png" alt="github repository"> Ripository: <a href="https://github.com/miramiku/Cypress">miramiku/Cypress</a></li>
+							<li>Ripository <img src="images/github-icon.png" alt="github repository">: <a href="https://github.com/miramiku/Cypress">miramiku/Cypress</a></li>
 							<li>Processed Database: <a href="https://dl.dropboxusercontent.com/u/6164477/wizon/cypress/equipment.json">equipment.json</a></li>
 							<li>Original Database: <a href="https://onedrive.live.com/redir?page=view&amp;resid=716B8A626FB713C5!2012&amp;authkey=!AN5inIkYaDGbvAE">equipment.db.xlsm (Read only)</a></li>
 						</ul>
@@ -110,7 +110,6 @@
 							<li>サンプル2： 装備時の付与効果に "キラー" が含まれる装備</li>
 							<li>CYPRESS.displayEquipmentCard( CYPRESS.search( function ( r ) { return r[ CYPRESS.COLUMN.WHEN_EQUIPPED ].match( "キラー" ) ? true : false; } ) );</li>
 							<li class="newline">いずれは Cypress のドキュメントを用意したいと思います…</li>
-							<li>サンプルのような条件を指定するケースは頻度が低い判断して、検索条件パネルでは指定できませんが要望が多ければ追加を検討します</li>
 						</ul>
 					</div><!-- #landing -->
 				</div><!-- .equipment-card-inner -->
