--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<!-- scripts -->
 <!--
-	<script src="features/cypress.retrieval.min.js?ver=1.2.3"></script>
+	<script src="features/cypress.retrieval.min.js?ver=1.2.4"></script>
 -->
 	<script src="features/jquery.min.js"></script>
 	<script src="features/slidebars.min.js"></script>
@@ -91,9 +91,8 @@
 						</ul>
 						<h4>History: 主な変更履歴</h4>
 						<ul>
-							<li>[2015-04-09] 鍛錬シミュレートと装備データのコピー機能を追加</li>
-							<li>[2015-03-25] サイトの URL を変更</li>
-							<li>[2015-03-16] 「使い方を挿入」ボタンを追加しました</li>
+							<li>[2015-04-14] [v1.2.4] 装備データベースの仕様を一部変更しました</li>
+							<li>[2015-04-09] [v1.2.0] 鍛錬シミュレートと装備データのコピー機能を追加</li>
 							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Major-Changes">(GitHub) Cypress wiki 主な変更履歴</a></li>
 						</ul>
 						<h4>Advanced usage: 高度な使い方（かなり高度です＞＜；）</h4>
