meta タグの追加

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 	<!-- meta section -->
 	<meta name="Author" content="miku">
+	<meta name="keywords" content="Wizardry Online,wizon,装備検索,鍛錬シミュレート">
+	<meta name="description" content="Wizardry Online の装備品データを検索・抽出するシステムです。また、簡単な装備のん鍛錬シミュレート機能などもできます。">
 
 	<!-- scripts -->
 <!--
