--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
 							<li>Processed Database: <a href="https://dl.dropboxusercontent.com/u/6164477/wizon/equipment.json">equipment.json</a></li>
 							<li>Original Database: <a href="https://onedrive.live.com/redir?page=view&amp;resid=716B8A626FB713C5!2012&amp;authkey=!AN5inIkYaDGbvAE">equipment.db.xlsm (Read only)</a></li>
 						</ul>
-						<h4>History: 主な変更履歴</h4>
+						<h4>Changelog: 変更履歴</h4>
 						<ul>
 							<li>[2015-04-14] [v1.2.4] 装備データベースの仕様を一部変更しました</li>
 							<li>[2015-04-09] [v1.2.0] 鍛錬シミュレートと装備データのコピー機能を追加</li>
-							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Major-Changes">(GitHub) Cypress wiki 主な変更履歴</a></li>
+							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Changelog">(GitHub) Cypress wiki 主な変更履歴</a></li>
 						</ul>
 						<h4>Advanced usage: 高度な使い方（かなり高度です＞＜；）</h4>
 						<ul>
