変更履歴の記載漏れ

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2015-04-24] [v1.2.6] データベースの簡素化</li>
 							<li>[2015-04-24] [v1.2.5] 矢・銃弾の効率に関する項目に色付けしました</li>
 							<li>[2015-04-14] [v1.2.4] 装備データベースの仕様を一部変更しました</li>
 							<li>[2015-04-09] [v1.2.0] 鍛錬シミュレートと装備データのコピー機能を追加</li>
