--- a/index.html
+++ b/index.html
@@ -94,10 +94,11 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
-							<li>[2015-04-27] [v1.2.6] データベースの簡素化</li>
-							<li>[2015-04-24] [v1.2.5] 矢・銃弾の効率に関する項目に色付けしました</li>
-							<li>[2015-04-14] [v1.2.4] 装備データベースの仕様を一部変更しました</li>
-							<li>[2015-04-09] [v1.2.0] 鍛錬シミュレートと装備データのコピー機能を追加</li>
+							<li>[2015-04-23] [v0.3.7] v0.3.6 の不具合修正</li>
+							<li>[2015-04-27] [v0.3.6] データベースの簡素化</li>
+							<li>[2015-04-24] [v0.3.5] 矢・銃弾の効率に関する項目に色付けしました</li>
+							<li>[2015-04-14] [v0.3.4] 装備データベースの仕様を一部変更しました</li>
+							<li>[2015-04-09] [v0.3.0] 鍛錬シミュレートと装備データのコピー機能を追加</li>
 							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Changelog">(GitHub) Cypress wiki 変更履歴</a></li>
 						</ul>
 						<h4>Advanced usage: 右のパネルではできない詳細な検索</h4>
