--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 	<meta name="description" content="Wizardry Online の装備品データを検索・抽出するシステムです。また、簡単な装備のん鍛錬シミュレート機能などもできます。">
 
 	<!-- scripts -->
-	<script src="features/cypress.retrieval.min.js?ver=1.2.6"></script>
+<!--
+	<script src="features/cypress.retrieval.min.js?ver=0.3.7"></script>
+-->
+	<script src="features/jquery.min.js"></script>
+	<script src="features/slidebars.min.js"></script>
+	<script src="features/ion.rangeSlider.min.js"></script>
+	<script src="features/colorbox.min.js"></script>
+	<script src="features/icheck.min.js"></script>
+	<script src="features/zeroclipboard.min.js"></script>
+	<script src="features/cypress.core.js"></script>
+	<script src="features/cypress.retrieval.js"></script>
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
@@ -84,10 +94,11 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
-							<li>[2015-04-27] [v1.2.6] データベースの簡素化</li>
-							<li>[2015-04-24] [v1.2.5] 矢・銃弾の効率に関する項目に色付けしました</li>
-							<li>[2015-04-14] [v1.2.4] 装備データベースの仕様を一部変更しました</li>
-							<li>[2015-04-09] [v1.2.0] 鍛錬シミュレートと装備データのコピー機能を追加</li>
+							<li>[2015-04-23] [v0.3.7] v0.3.6 の不具合修正</li>
+							<li>[2015-04-27] [v0.3.6] データベースの簡素化</li>
+							<li>[2015-04-24] [v0.3.5] 矢・銃弾の効率に関する項目に色付けしました</li>
+							<li>[2015-04-14] [v0.3.4] 装備データベースの仕様を一部変更しました</li>
+							<li>[2015-04-09] [v0.3.0] 鍛錬シミュレートと装備データのコピー機能を追加</li>
 							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Changelog">(GitHub) Cypress wiki 変更履歴</a></li>
 						</ul>
 						<h4>Advanced usage: 右のパネルではできない詳細な検索</h4>
