辞書式ソートの実装

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 	<div id="sorting-pane"   class="sb-slidebar sb-left  sb-width-custom sb-style-overlay" data-sb-width="300px">
 		<div class="sort-checkbox-top-category">
-			<input id="catalog-order" type="radio" name="sort-category" data-label="標準" checked>
+			<input id="catalog-order" type="radio" name="sort-category" data-label="装備種別" checked>
 		</div>
 		<div class="sort-checkbox-top-category">
 			<input id="lexicographic-order" type="radio" name="sort-category" data-category="LAXICOGRAPHIC" data-label="テキスト">
