--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<!-- scripts -->
 <!--
-	<script src="features/cypress.retrieval.min.js?ver=0.3.8"></script>
+	<script src="features/cypress.retrieval.min.js?ver=1.0.0"></script>
 -->
 	<script src="features/jquery.min.js"></script>
 	<script src="features/slidebars.min.js"></script>
@@ -65,14 +65,25 @@
 							<li>質問や要望、提案などありましたらコンタクトの方までお願いします</li>
 						</ul>
 						<!-- <h4>Features: 特徴</h4> -->
-						<h4>Usage: 使い方</h4>
+						<h4>Retrieval: 装備の検索・抽出について</h4>
 						<ul>
 							<li>条件を設定して「検索」ボタンを押せば条件に該当した装備データが表示されます</li>
 							<li>該当するデータが多いと表示されるまで時間（数秒程度）がかかってしまうのでご注意ください</li>
-							<li>該当するデータが0件の場合は「検索」ボタンは操作できません</li>
+							<li>該当するデータが 0 件の場合は「検索」ボタンを押すことが出来ません</li>
 							<li>該当するデータの件数は検索パネル上部にある「検索」ボタンの左側に表示されています</li>
 							<li>「検索」ボタンは上部と下部にあわせて2つありますがどちらを利用しても同じ動作をします</li>
-							<li>再度検索しなおす時は右上のボタンを押すと検索条件パネルが開きます</li>
+							<li>再度検索しなおす時はサイト右上の「検索・抽出」を押すと検索条件パネルが開きます</li>
+						</ul>
+						<h4>About Sorting: 並べ替え機能について</h4>
+						<ul>
+							<li>サイト左上の「並べ替え」を押すと並べ替えパネルの開閉ができます</li>
+							<li>一番上の「装備種別」または属性名（茶色いボタン）を押すと装備データを並べ替えます</li>
+							<li>鍛錬をシミュレートして書きかえたデータも反映されて並べ替えられます</li>
+							<li>並べ替えはこの使い方が表示されていると動作しません。<br>
+								並べ替えをしたいときはもう一度検索ボタンを押して消してください</li>
+							<li>表示件数が多すぎると装備データを再描画するのに時間がかかってしまいます。<br>
+								環境にもよりますが 100 件未満の検索結果で使用されることをお勧めします</li>
+							<li>検索条件パネルのように自動で閉じないので、閉じるときはサイト左上の「並べ替え」を押してください</li>
 						</ul>
 						<h4>Tasks: 今後の機能追加予定や既知の不具合など</h4>
 						<ul>
@@ -98,12 +109,7 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
-							<li>[2015-05-11] [v0.3.8] コピー用文字列のステータス名が小文字だった不具合を修正</li>
-							<li>[2015-04-23] [v0.3.7] v0.3.6 の不具合修正</li>
-							<li>[2015-04-27] [v0.3.6] データベースの簡素化</li>
-							<li>[2015-04-24] [v0.3.5] 矢・銃弾の効率に関する項目に色付けしました</li>
-							<li>[2015-04-14] [v0.3.4] 装備データベースの仕様を一部変更しました</li>
-							<li>[2015-04-09] [v0.3.0] 鍛錬シミュレートと装備データのコピー機能を追加</li>
+							<li>[2015-05-20] [v1.0.0] 並べ替え機能実装</li>
 							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Changelog">(GitHub) Cypress wiki 変更履歴</a></li>
 						</ul>
 						<h4>Advanced usage: 右のパネルではできない詳細な検索</h4>
@@ -116,7 +122,7 @@
 		</div><!-- #equipments -->
 	</div><!-- container -->
 
-	<div id="sorting-pane"   class="sb-slidebar sb-left  sb-width-custom sb-style-overlay" data-sb-width="300px">
+	<div id="sorting-pane"   class="sb-slidebar sb-left  sb-width-custom sb-style-overlay" data-sb-width="320px">
 		<div class="sort-checkbox-top-category">
 			<input id="catalog-order" type="radio" name="sort-category" data-label="装備種別" checked>
 		</div>
@@ -124,76 +130,88 @@
 			<input id="lexicographic-order" type="radio" name="sort-category" data-category="LAXICOGRAPHIC" data-label="テキスト">
 			<button id="lexicographic-sort-order-change" data-order="ASC" disabled><span class="icon">&#xe603;</span> 辞書順　</button>
 		</div>
-		<div id="lexicographic-sort-list" class="sorting-option">
-			<input id="order-name"          type="radio" name="laxicographic-sort-order" data-key="NAME"          data-label="装備名" checked>
-			<input id="order-when-equipped" type="radio" name="laxicographic-sort-order" data-key="WHEN_EQUIPPED" data-label="装備時付与効果">
-			<input id="order-status-change" type="radio" name="laxicographic-sort-order" data-key="STATUS_CHANGE" data-label="状態異常">
-		</div><!-- #lexicographic-sort -->
+		<div id="lexicographic-sort-list">
+			<input type="radio" name="laxicographic-sort-order" data-key="NAME"          data-label="装備名" checked>
+			<input type="radio" name="laxicographic-sort-order" data-key="WHEN_EQUIPPED" data-label="装備時付与効果">
+			<input type="radio" name="laxicographic-sort-order" data-key="STATUS_CHANGE" data-label="状態異常">
+		</div><!-- #lexicographic-sort-list -->
 
 		<div class="sort-checkbox-top-category">
 			<input id="numeric-order" type="radio" name="sort-category" data-category="NUMERIC" data-label="順序・数値">
 			<button id="numeric-sort-order-change" data-order="ASC" disabled><span class="icon">&#xe601;</span> 低 → 高</button>
 		</div>
+		<div id="numeric-sort-list">
+			<div id="sort-basic-property">
+				<span class="label">基本属性</span>
+				<div class="checkboxes">
+					<input type="radio" name="numeric-sort-order" data-key="RARITY"      data-label="品質" checked>
+					<input type="radio" name="numeric-sort-order" data-key="GRADE"       data-label="グレード">
+					<input type="radio" name="numeric-sort-order" data-key="PHYSICAL"    data-label="物攻/物防">
+					<input type="radio" name="numeric-sort-order" data-key="MAGICAL"     data-label="魔攻/魔防">
+					<input type="radio" name="numeric-sort-order" data-key="LEVEL_FLOOR" data-label="レベル">
+					<input type="radio" name="numeric-sort-order" data-key="DURABILITY"  data-label="耐久度">
+					<input type="radio" name="numeric-sort-order" data-key="WEIGHT"      data-label="重量">
+					<input type="radio" name="numeric-sort-order" data-key="HARDNESS"    data-label="硬度">
+				</div><!-- .checkboxes -->
+			</div><!-- #sort-basic-property -->
 
-		<div id="numeric-sort-list" class="sorting-option">
-			<ul>
-				<li>品質</li>
-				<li>レベル</li>
-				<li>グレード</li>
-				<li>物理</li>
-				<li>魔法</li>
-				<li>耐久</li>
-				<li>重量</li>
-				<li>硬度</li>
-				<li>ステータス
-					<ul>
-						<li>HP</li>
-						<li>MP</li>
-						<li>STR</li>
-						<li>VIT</li>
-						<li>DEX</li>
-						<li>AGI</li>
-						<li>INT</li>
-						<li>PIE</li>
-						<li>LUK</li>
-					</ul>
-				</li>
-				<li>状態異常
-					<ul>
-						<li>毒</li>
-						<li>麻痺</li>
-						<li>石化</li>
-						<li>気絶</li>
-						<li>暗闇</li>
-						<li>睡眠</li>
-						<li>沈黙</li>
-						<li>魅了</li>
-						<li>混乱</li>
-						<li>恐怖</li>
-					</ul>
-				</li>
-				<li>魔法防御
-					<ul>
-						<li>火防御</li>
-						<li>水防御</li>
-						<li>風防御</li>
-						<li>地防御</li>
-						<li>光防御</li>
-						<li>闇防御</li>
-					</ul>
-				</li>
-				<li>魔法攻撃
-					<ul>
-						<li>火攻撃</li>
-						<li>水攻撃</li>
-						<li>風攻撃</li>
-						<li>地攻撃</li>
-						<li>光攻撃</li>
-						<li>闇攻撃</li>
-					</ul>
-				</li>
-			</ul>
-		</div><!-- #order-sort -->
+			<div id="sort-special-effect">
+				<span class="label">ステータス補正</span>
+				<div class="checkboxes">
+					<input type="radio" name="numeric-sort-order" data-key="HP"  data-label="HP">
+					<input type="radio" name="numeric-sort-order" data-key="MP"  data-label="MP">
+					<input type="radio" name="numeric-sort-order" data-key="STR" data-label="STR">
+					<input type="radio" name="numeric-sort-order" data-key="VIT" data-label="VIT">
+					<input type="radio" name="numeric-sort-order" data-key="DEX" data-label="DEX">
+					<input type="radio" name="numeric-sort-order" data-key="AGI" data-label="AGI">
+					<input type="radio" name="numeric-sort-order" data-key="INT" data-label="INT">
+					<input type="radio" name="numeric-sort-order" data-key="PIE" data-label="PIE">
+					<input type="radio" name="numeric-sort-order" data-key="LUK" data-label="LUK">
+				</div><!-- .checkboxes -->
+			</div><!-- #sort-special-effect -->
+
+			<div id="sort-status-change">
+				<span class="label">状態異常</span>
+				<div class="checkboxes">
+					<input type="radio" name="numeric-sort-order" data-key="POISON"    data-label="毒">
+					<input type="radio" name="numeric-sort-order" data-key="PARALYZE"  data-label="麻痺">
+					<input type="radio" name="numeric-sort-order" data-key="PETRIFY"   data-label="石化">
+					<input type="radio" name="numeric-sort-order" data-key="FAINT"     data-label="気絶">
+					<input type="radio" name="numeric-sort-order" data-key="BLIND"     data-label="暗闇">
+				</div><!-- .checkboxes -->
+				<div class="checkboxes">
+					<input type="radio" name="numeric-sort-order" data-key="SLEEP"     data-label="睡眠">
+					<input type="radio" name="numeric-sort-order" data-key="SILENCE"   data-label="沈黙">
+					<input type="radio" name="numeric-sort-order" data-key="CHARM"     data-label="魅了">
+					<input type="radio" name="numeric-sort-order" data-key="CONFUSION" data-label="混乱">
+					<input type="radio" name="numeric-sort-order" data-key="FEAR"      data-label="恐怖">
+				</div><!-- .checkboxes -->
+			</div><!-- #sort-status-change -->
+
+			<div id="sort-magic-attack">
+				<span class="label">魔法攻撃</span>
+				<div class="checkboxes">
+					<input type="radio" name="numeric-sort-order" data-key="FIRE_ATTACK"  data-label="火">
+					<input type="radio" name="numeric-sort-order" data-key="WATER_ATTACK" data-label="水">
+					<input type="radio" name="numeric-sort-order" data-key="WIND_ATTACK"  data-label="風">
+					<input type="radio" name="numeric-sort-order" data-key="EARTH_ATTACK" data-label="地">
+					<input type="radio" name="numeric-sort-order" data-key="LIGHT_ATTACK" data-label="光">
+					<input type="radio" name="numeric-sort-order" data-key="DARK_ATTACK"  data-label="闇">
+				</div><!-- .checkboxes -->
+			</div><!-- #sort-magic-attack -->
+
+			<div id="sort-magic-resist">
+				<span class="label">魔法防御</span>
+				<div class="checkboxes">
+					<input type="radio" name="numeric-sort-order" data-key="FIRE_RESIST"  data-label="火">
+					<input type="radio" name="numeric-sort-order" data-key="WATER_RESIST" data-label="水">
+					<input type="radio" name="numeric-sort-order" data-key="WIND_RESIST"  data-label="風">
+					<input type="radio" name="numeric-sort-order" data-key="EARTH_RESIST" data-label="地">
+					<input type="radio" name="numeric-sort-order" data-key="LIGHT_RESIST" data-label="光">
+					<input type="radio" name="numeric-sort-order" data-key="DARK_RESIST"  data-label="闇">
+				</div><!-- .checkboxes -->
+			</div><!-- #sort-magic-resist -->
+		</div><!-- #order-sort-list -->
 	</div><!-- #sorting-pane -->
 
 	<div id="retrieval-pane" class="sb-slidebar sb-right sb-width-custom sb-style-overlay" data-sb-width="300px">
