--- a/index.html
+++ b/index.html
@@ -144,14 +144,18 @@
 			<div id="sort-basic-property">
 				<span class="label">基本属性</span>
 				<div class="checkboxes">
-					<input type="radio" name="numeric-sort-order" data-key="RARITY"      data-label="品質" checked>
-					<input type="radio" name="numeric-sort-order" data-key="GRADE"       data-label="グレード">
-					<input type="radio" name="numeric-sort-order" data-key="PHYSICAL"    data-label="物攻/物防">
-					<input type="radio" name="numeric-sort-order" data-key="MAGICAL"     data-label="魔攻/魔防">
-					<input type="radio" name="numeric-sort-order" data-key="LEVEL_FLOOR" data-label="レベル">
-					<input type="radio" name="numeric-sort-order" data-key="DURABILITY"  data-label="耐久度">
-					<input type="radio" name="numeric-sort-order" data-key="WEIGHT"      data-label="重量">
-					<input type="radio" name="numeric-sort-order" data-key="HARDNESS"    data-label="硬度">
+					<input type="radio" name="numeric-sort-order" data-key="RARITY"        data-label="品質" checked>
+					<input type="radio" name="numeric-sort-order" data-key="GRADE"         data-label="グレード">
+					<input type="radio" name="numeric-sort-order" data-key="PHYSICAL"      data-label="物攻/物防">
+					<input type="radio" name="numeric-sort-order" data-key="MAGICAL"       data-label="魔攻/魔防">
+					<input type="radio" name="numeric-sort-order" data-key="LEVEL_FLOOR"   data-label="レベル">
+					<input type="radio" name="numeric-sort-order" data-key="DURABILITY"    data-label="耐久度">
+					<input type="radio" name="numeric-sort-order" data-key="WEIGHT"        data-label="重量">
+					<input type="radio" name="numeric-sort-order" data-key="HARDNESS"      data-label="硬度">
+					<input type="radio" name="numeric-sort-order" data-key="RANGE"         data-label="射程距離">
+					<input type="radio" name="numeric-sort-order" data-key="QUALITY"       data-label="溜め・装填">
+					<input type="radio" name="numeric-sort-order" data-key="CHARGE_WEIGHT" data-label="装填数">
+					<input type="radio" name="numeric-sort-order" data-key="QUALITY"       data-label="GP">
 				</div><!-- .checkboxes -->
 			</div><!-- #sort-basic-property -->
 
