--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 	<meta name="description" content="Wizardry Online の装備品データを検索・抽出するシステムです。また、簡単な装備の鍛錬シミュレート機能などもできます。">
 
 	<!-- scripts -->
-	<script src="features/cypress.retrieval.min.js?ver=1.0.0"></script>
+	<script src="features/cypress.retrieval.min.js?ver=1.0.1"></script>
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
+
+	<!-- favicons -->
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
@@ -29,9 +31,13 @@
 			<img src="images/cypress-logo.png" alt="Cypress">
 		</div>
 
+		<div id="usage-button-box" class="control-box buttons">
+			<button id="usage-button">使い方を挿入</button>
+		</div><!-- #usage-button-box-main -->
+
 		<div id="retrieval-pane-button" class="sb-toggle-right">
 			<span class="button-text">検索・抽出</span>
-			<span class="button-icon">&#xe604;</span>
+			<span class="button-icon">&#xe606;</span>
 		</div>
 
 		<span id="tool-commentary"></span>
@@ -97,6 +103,7 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2015-05-20] [v1.0.1] 細かな修正と実装 (Issues <a href="http://github.com/miramiku/Cypress/issues/12">#12</a>, <a href="http://github.com/miramiku/Cypress/issues/13">#13</a>, <a href="http://github.com/miramiku/Cypress/issues/55">#55</a>, <a href="http://github.com/miramiku/Cypress/issues/57">#57</a>, <a href="http://github.com/miramiku/Cypress/issues/60">#60</a>)</li>
 							<li>[2015-05-20] [v1.0.0] 並べ替え機能実装</li>
 							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Changelog">(GitHub) Cypress wiki 変更履歴</a></li>
 						</ul>
@@ -458,10 +465,6 @@
 				<button id="reqiest-reset-button">条件リセット</button>
 				<button id="retrieval-button-main">検索</button>
 			</div><!-- #retrieval-button-box-main -->
-
-			<div id="usage-button-box" class="control-box buttons">
-				<button id="usage-button">使い方を挿入</button>
-			</div><!-- #usage-button-box-main -->
 		</div><!-- #retrieval-queries -->
 	</div><!-- #retrieval-pane -->
 
