見出し語修正

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<li>「検索」ボタンは上部と下部にあわせて2つありますがどちらを利用しても同じ動作をします</li>
 							<li>再度検索しなおす時はサイト右上の「検索・抽出」を押すと検索条件パネルが開きます</li>
 						</ul>
-						<h4>About Sorting: 並べ替え機能について</h4>
+						<h4>Sorting: 並べ替え機能について</h4>
 						<ul>
 							<li>サイト左上の「並べ替え」を押すと並べ替えパネルの開閉ができます</li>
 							<li>一番上の「装備種別」または属性名（茶色いボタン）を押すと装備データを並べ替えます</li>
