--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<!-- scripts -->
 <!--
-	<script src="features/cypress.retrieval.min.js?ver=1.0.1"></script>
+	<script src="features/cypress.retrieval.min.js?ver=1.0.2"></script>
 -->
 	<script src="features/jquery.min.js"></script>
 	<script src="features/slidebars.min.js"></script>
@@ -78,7 +78,7 @@
 							<li>「検索」ボタンは上部と下部にあわせて2つありますがどちらを利用しても同じ動作をします</li>
 							<li>再度検索しなおす時はサイト右上の「検索・抽出」を押すと検索条件パネルが開きます</li>
 						</ul>
-						<h4>About Sorting: 並べ替え機能について</h4>
+						<h4>Sorting: 並べ替え機能について</h4>
 						<ul>
 							<li>サイト左上の「並べ替え」を押すと並べ替えパネルの開閉ができます</li>
 							<li>一番上の「装備種別」または属性名（茶色いボタン）を押すと装備データを並べ替えます</li>
@@ -91,7 +91,7 @@
 						</ul>
 						<h4>Tasks: 今後の機能追加予定や既知の不具合など</h4>
 						<ul>
-							<li><a href="https://github.com/miramiku/Cypress/issues">Cypress Issues</a></li>
+							<li><a href="https://github.com/miramiku/Cypress/issues">Cypress Issues <span class="icon">&#xeab4;</span></a></li>
 						</ul>
 						<h4>Consideration: 動作情報</h4>
 						<ul>
@@ -113,13 +113,14 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2015-05-21] [v1.0.2] <a href="http://github.com/miramiku/Cypress/issues/60">Issues #60</a> の対応もれと検索ボタンが正しく制御されていなかった不具合の修正</li>
 							<li>[2015-05-20] [v1.0.1] 細かな修正と実装 (Issues <a href="http://github.com/miramiku/Cypress/issues/12">#12</a>, <a href="http://github.com/miramiku/Cypress/issues/13">#13</a>, <a href="http://github.com/miramiku/Cypress/issues/55">#55</a>, <a href="http://github.com/miramiku/Cypress/issues/57">#57</a>, <a href="http://github.com/miramiku/Cypress/issues/60">#60</a>)</li>
 							<li>[2015-05-20] [v1.0.0] 並べ替え機能実装</li>
-							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Changelog">(GitHub) Cypress wiki 変更履歴</a></li>
+							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Changelog">Cypress wiki 変更履歴 <span class="icon">&#xeab4;</span></a></li>
 						</ul>
 						<h4>Advanced usage: 右のパネルではできない詳細な検索</h4>
 						<ul>
-							<li><a href="https://github.com/miramiku/Cypress/wiki/Advanced-Usage">(GitHub) Cypress wiki 高度な検索</a></li>
+							<li><a href="https://github.com/miramiku/Cypress/wiki/Advanced-Usage">Cypress wiki 高度な検索 <span class="icon">&#xeab4;</span></a></li>
 						</ul>
 					</div><!-- #landing -->
 				</div><!-- .equipment-card-inner -->
