--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="Wizardry Online の装備品データを検索・抽出するシステムです。また、簡単な装備の鍛錬シミュレート機能などもできます。">
 
 	<!-- scripts -->
-	<script src="features/cypress.retrieval.min.js?ver=1.0.1"></script>
+	<script src="features/cypress.retrieval.min.js?ver=1.0.2"></script>
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
@@ -81,7 +81,7 @@
 						</ul>
 						<h4>Tasks: 今後の機能追加予定や既知の不具合など</h4>
 						<ul>
-							<li><a href="https://github.com/miramiku/Cypress/issues">Cypress Issues</a></li>
+							<li><a href="https://github.com/miramiku/Cypress/issues">Cypress Issues <span class="icon">&#xeab4;</span></a></li>
 						</ul>
 						<h4>Consideration: 動作情報</h4>
 						<ul>
@@ -103,13 +103,14 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2015-05-21] [v1.0.2] <a href="http://github.com/miramiku/Cypress/issues/60">Issues #60</a> の対応もれと検索ボタンが正しく制御されていなかった不具合の修正</li>
 							<li>[2015-05-20] [v1.0.1] 細かな修正と実装 (Issues <a href="http://github.com/miramiku/Cypress/issues/12">#12</a>, <a href="http://github.com/miramiku/Cypress/issues/13">#13</a>, <a href="http://github.com/miramiku/Cypress/issues/55">#55</a>, <a href="http://github.com/miramiku/Cypress/issues/57">#57</a>, <a href="http://github.com/miramiku/Cypress/issues/60">#60</a>)</li>
 							<li>[2015-05-20] [v1.0.0] 並べ替え機能実装</li>
-							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Changelog">(GitHub) Cypress wiki 変更履歴</a></li>
+							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Changelog">Cypress wiki 変更履歴 <span class="icon">&#xeab4;</span></a></li>
 						</ul>
 						<h4>Advanced usage: 右のパネルではできない詳細な検索</h4>
 						<ul>
-							<li><a href="https://github.com/miramiku/Cypress/wiki/Advanced-Usage">(GitHub) Cypress wiki 高度な検索</a></li>
+							<li><a href="https://github.com/miramiku/Cypress/wiki/Advanced-Usage">Cypress wiki 高度な検索 <span class="icon">&#xeab4;</span></a></li>
 						</ul>
 					</div><!-- #landing -->
 				</div><!-- .equipment-card-inner -->
