--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
 					<input type="checkbox" id="query-bis" data-label="BIS">
 					<input type="checkbox" id="query-lor" data-label="LOR">
 					<input type="checkbox" id="query-clo" data-label="CLO">
+					<input type="checkbox" id="query-alc" data-label="ALC">
 				</div><!-- .control-box.checkboxes -->
 			</div><!-- #query-classes -->
 
