--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="Wizardry Online の装備品データを検索・抽出するシステムです。また、簡単な装備の鍛錬シミュレート機能などもできます。">
 
 	<!-- scripts -->
-	<script src="features/cypress.retrieval.min.js?ver=1.0.2"></script>
+	<script src="features/cypress.retrieval.min.js?ver=1.0.4"></script>
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
@@ -103,7 +103,8 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
-							<li>[2015-05-21] [v1.0.2] <a href="http://github.com/miramiku/Cypress/issues/60">Issues #60</a> の対応もれと検索ボタンが正しく制御されていなかった不具合の修正</li>
+							<li>[2015-05-23] [v1.0.4] 錬金術師実装に向けて対応</li>
+							<li>[2015-05-21] [v1.0.3] <a href="http://github.com/miramiku/Cypress/issues/60">Issues #60</a> の対応もれと検索ボタンが正しく制御されていなかった不具合の修正</li>
 							<li>[2015-05-20] [v1.0.1] 細かな修正と実装 (Issues <a href="http://github.com/miramiku/Cypress/issues/12">#12</a>, <a href="http://github.com/miramiku/Cypress/issues/13">#13</a>, <a href="http://github.com/miramiku/Cypress/issues/55">#55</a>, <a href="http://github.com/miramiku/Cypress/issues/57">#57</a>, <a href="http://github.com/miramiku/Cypress/issues/60">#60</a>)</li>
 							<li>[2015-05-20] [v1.0.0] 並べ替え機能実装</li>
 							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Changelog">Cypress wiki 変更履歴 <span class="icon">&#xeab4;</span></a></li>
@@ -263,6 +264,7 @@
 					<input type="checkbox" id="query-bis" data-label="BIS">
 					<input type="checkbox" id="query-lor" data-label="LOR">
 					<input type="checkbox" id="query-clo" data-label="CLO">
+					<input type="checkbox" id="query-alc" data-label="ALC">
 				</div><!-- .control-box.checkboxes -->
 			</div><!-- #query-classes -->
 
