「装備種別」を「装備分類」に変更。英語名は最初から type だったため変更なし。

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<h4>Sorting: 並べ替え機能について</h4>
 						<ul>
 							<li>サイト左上の「並べ替え」を押すと並べ替えパネルの開閉ができます</li>
-							<li>一番上の「装備種別」または属性名（茶色いボタン）を押すと装備データを並べ替えます</li>
+							<li>一番上の「装備分類」または属性名（茶色いボタン）を押すと装備データを並べ替えます</li>
 							<li>鍛錬をシミュレートして書きかえたデータも反映されて並べ替えられます</li>
 							<li>並べ替えはこの使い方が表示されていると動作しません。<br>
 								並べ替えをしたいときはもう一度検索ボタンを押して消してください</li>
@@ -132,7 +132,7 @@
 
 	<div id="sorting-pane"   class="sb-slidebar sb-left  sb-width-custom sb-style-overlay" data-sb-width="320px">
 		<div class="sort-checkbox-top-category">
-			<input id="catalog-order" type="radio" name="sort-category" data-label="装備種別" checked>
+			<input id="catalog-order" type="radio" name="sort-category" data-label="装備分類" checked>
 		</div>
 		<div class="sort-checkbox-top-category">
 			<input id="lexicographic-order" type="radio" name="sort-category" data-category="LAXICOGRAPHIC" data-label="テキスト">
