「装備種別」を「装備分類」に変更

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<h4>Sorting: 並べ替え機能について</h4>
 						<ul>
 							<li>サイト左上の「並べ替え」を押すと並べ替えパネルの開閉ができます</li>
-							<li>一番上の「装備種別」または属性名（茶色いボタン）を押すと装備データを並べ替えます</li>
+							<li>一番上の「装備分類」または属性名（茶色いボタン）を押すと装備データを並べ替えます</li>
 							<li>鍛錬をシミュレートして書きかえたデータも反映されて並べ替えられます</li>
 							<li>並べ替えはこの使い方が表示されていると動作しません。<br>
 								並べ替えをしたいときはもう一度検索ボタンを押して消してください</li>
@@ -103,7 +103,7 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
-							<li>[2015-05-29] [v1.0.4] 装備種別の順序が正しくなかった不具合の修正</li>
+							<li>[2015-05-29] [v1.0.4] 装備分類の順序が正しくなかった不具合の修正</li>
 							<li>[2015-05-23] [v1.0.3] 錬金術師実装に向けて対応</li>
 							<li>[2015-05-21] [v1.0.2] <a href="http://github.com/miramiku/Cypress/issues/60">Issues #60</a> の対応もれと検索ボタンが正しく制御されていなかった不具合の修正</li>
 							<li>[2015-05-20] [v1.0.1] 細かな修正と実装 (Issues <a href="http://github.com/miramiku/Cypress/issues/12">#12</a>, <a href="http://github.com/miramiku/Cypress/issues/13">#13</a>, <a href="http://github.com/miramiku/Cypress/issues/55">#55</a>, <a href="http://github.com/miramiku/Cypress/issues/57">#57</a>, <a href="http://github.com/miramiku/Cypress/issues/60">#60</a>)</li>
@@ -122,7 +122,7 @@
 
 	<div id="sorting-pane"   class="sb-slidebar sb-left  sb-width-custom sb-style-overlay" data-sb-width="320px">
 		<div class="sort-checkbox-top-category">
-			<input id="catalog-order" type="radio" name="sort-category" data-label="装備種別" checked>
+			<input id="catalog-order" type="radio" name="sort-category" data-label="装備分類" checked>
 		</div>
 		<div class="sort-checkbox-top-category">
 			<input id="lexicographic-order" type="radio" name="sort-category" data-category="LAXICOGRAPHIC" data-label="テキスト">
