--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<!-- scripts -->
 <!--
-	<script src="features/cypress.retrieval.min.js?ver=1.0.4"></script>
+	<script src="features/cypress.retrieval.min.js?ver=1.0.5"></script>
 -->
 	<script src="features/jquery.min.js"></script>
 	<script src="features/slidebars.min.js"></script>
@@ -113,6 +113,7 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2015-06-10] [v1.0.5] グレード 21 装備品への対応</li>
 							<li>[2015-05-21] [v1.0.4] <a href="http://github.com/miramiku/Cypress/issues/60">Issues #60</a> の対応もれと検索ボタンが正しく制御されていなかった不具合の修正</li>
 							<li>[2015-05-23] [v1.0.3] 錬金術師実装に向けて対応</li>
 							<li>[2015-05-21] [v1.0.2] <a href="http://github.com/miramiku/Cypress/issues/60">Issues #60</a> の対応もれと検索ボタンが正しく制御されていなかった不具合の修正</li>
