--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="Wizardry Online の装備品データを検索・抽出するシステムです。また、簡単な装備の鍛錬シミュレート機能などもできます。">
 
 	<!-- scripts -->
-	<script src="features/cypress.retrieval.min.js?ver=1.0.5"></script>
+	<script src="features/cypress.retrieval.min.js?ver=1.0.6"></script>
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
@@ -103,6 +103,7 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2015-08-26] [v1.0.6] グレード 22 装備品への対応および鍛錬データ追加</li>
 							<li>[2015-06-10] [v1.0.5] グレード 21 装備品への対応</li>
 							<li>[2015-05-21] [v1.0.4] 装備分類の順序が正しくなかった不具合の修正</li>
 							<li>[2015-05-23] [v1.0.3] 錬金術師実装に向けて対応</li>
