add forging data

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<!-- scripts -->
 <!--
-	<script src="features/cypress.retrieval.min.js?ver=1.0.6"></script>
+	<script src="features/cypress.retrieval.min.js?ver=1.0.7"></script>
 -->
 	<script src="features/jquery.min.js"></script>
 	<script src="features/slidebars.min.js"></script>
@@ -113,6 +113,7 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2015-09-06] [v1.0.7] 鍛錬データ追加</li>
 							<li>[2015-08-26] [v1.0.6] グレード 22 装備品への対応および鍛錬データ追加</li>
 							<li>[2015-06-10] [v1.0.5] グレード 21 装備品への対応</li>
 							<li>[2015-05-21] [v1.0.4] 装備分類の順序が正しくなかった不具合の修正</li>
