--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="Wizardry Online の装備品データを検索・抽出するシステムです。また、簡単な装備の鍛錬シミュレート機能などもできます。">
 
 	<!-- scripts -->
-	<script src="features/cypress.retrieval.min.js?ver=1.0.8"></script>
+	<script src="features/cypress.retrieval.min.js?ver=2.0.0"></script>
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
@@ -98,20 +98,12 @@
 						<h4>Resources: リソース情報</h4>
 						<ul>
 							<li>Ripository: <a href="https://github.com/miramiku/Cypress">miramiku/Cypress <span class="icon">&#xeab4;</span></a></li>
-							<li>Processed Database: <a href="https://dl.dropboxusercontent.com/u/6164477/wizon/equipment.json">equipment.json</a></li>
+							<li>Processed Database: <a href="https://dl.dropboxusercontent.com/u/6164477/cypress/equipments.json">equipment.json</a></li>
 							<li>Original Database: <a href="https://onedrive.live.com/redir?resid=716b8a626fb713c5!2372&amp;authkey=!AFFFx02yh8Ck5Ss&amp;ithint=file%2cxlsm">equipment.db.xlsm (Read only)</a></li>
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
-							<li>[2015-09-18] [v1.0.8] 品質 Epic / Other に対応</li>
-							<li>[2015-09-06] [v1.0.7] 鍛錬データ追加</li>
-							<li>[2015-08-26] [v1.0.6] グレード 22 装備品への対応および鍛錬データ追加</li>
-							<li>[2015-06-10] [v1.0.5] グレード 21 装備品への対応</li>
-							<li>[2015-05-21] [v1.0.4] 装備分類の順序が正しくなかった不具合の修正</li>
-							<li>[2015-05-23] [v1.0.3] 錬金術師実装に向けて対応</li>
-							<li>[2015-05-21] [v1.0.2] <a href="http://github.com/miramiku/Cypress/issues/60">Issues #60</a> の対応もれと検索ボタンが正しく制御されていなかった不具合の修正</li>
-							<li>[2015-05-20] [v1.0.1] 細かな修正と実装 (Issues <a href="http://github.com/miramiku/Cypress/issues/12">#12</a>, <a href="http://github.com/miramiku/Cypress/issues/13">#13</a>, <a href="http://github.com/miramiku/Cypress/issues/55">#55</a>, <a href="http://github.com/miramiku/Cypress/issues/57">#57</a>, <a href="http://github.com/miramiku/Cypress/issues/60">#60</a>)</li>
-							<li>[2015-05-20] [v1.0.0] 並べ替え機能実装</li>
+							<li>[2015-11-06] [v2.0.0] エンチャントシステム実装によるデータベース改修</li>
 							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Changelog">Cypress wiki 変更履歴 <span class="icon">&#xeab4;</span></a></li>
 						</ul>
 						<h4>Advanced usage: 右のパネルではできない詳細な検索</h4>
@@ -485,6 +477,14 @@
 			<br> Wizardry Renaissance(TM) (c)2009 GMO Gamepot Inc. All rights reserved.
 		</p>
 	</footer>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-69788155-1', 'auto');
+		ga('send', 'pageview');
+	</script>
 </body>
 
 </html>
