--- a/index.html
+++ b/index.html
@@ -426,11 +426,11 @@
 										</tr>
 										<tr>
 											<td>
-												<span class="group-title">使用後トレード不可<img src="images/used.png" alt=""></span>
+												<span class="group-title">使用後トレード不可<img src="images/bind.png" alt=""></span>
 												<div class="group-line">
-													<input type="radio" name="option-used" class="all" data-flag="used" data-label="すべて" checked>
-													<input type="radio" name="option-used" class="only" data-flag="used" data-label="のみ">
-													<input type="radio" name="option-used" class="eliminate" data-flag="used" data-label="除外">
+													<input type="radio" name="option-bind" class="all" data-flag="bind" data-label="すべて" checked>
+													<input type="radio" name="option-bind" class="only" data-flag="bind" data-label="のみ">
+													<input type="radio" name="option-bind" class="eliminate" data-flag="bind" data-label="除外">
 												</div><!-- .group-line -->
 											</td>
 											<td>
