--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 		<div id="equipments">
 			<div id="usage" class="equipment-card">
 				<div class="equipment-card-inner usage">
+					<span class="ribbon usage"></span>
 					<div id="landing-title">
 						Cypress - wizardry online equipment retrieval system
 					</div>
