--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<!-- scripts -->
 <!--
-	<script src="features/cypress.retrieval.min.js?ver=2.0.0"></script>
+	<script src="features/cypress.retrieval.min.js?ver=2.1.0"></script>
 -->
 	<script src="features/jquery.min.js"></script>
 	<script src="features/slidebars.min.js"></script>
@@ -114,6 +114,7 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2015-11-06] [v2.1.0] 付与許容値の表示</li>
 							<li>[2015-11-06] [v2.0.0] エンチャントシステム実装によるデータベース改修</li>
 							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Changelog">Cypress wiki 変更履歴 <span class="icon">&#xeab4;</span></a></li>
 						</ul>
