--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<!-- scripts -->
 <!--
-	<script src="features/cypress.retrieval.min.js?ver=2.1.1"></script>
+	<script src="features/cypress.retrieval.min.js?ver=2.1.2"></script>
 -->
 	<script src="features/jquery.min.js"></script>
 	<script src="features/slidebars.min.js"></script>
@@ -114,6 +114,7 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2015-12-20] [v2.1.2] コピーボタンが動作しなかった不具合修正</li>
 							<li>[2015-12-16] [v2.1.1] グレード 23 装備品への対応およびレベル上限を 80 に引き上げ</li>
 							<li>[2015-11-06] [v2.1.0] 付与許容値の表示</li>
 							<li>[2015-11-06] [v2.0.0] エンチャントシステム実装によるデータベース改修</li>
