--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="Wizardry Online の装備品データを検索・抽出するシステムです。また、簡単な装備の鍛錬シミュレート機能などもできます。">
 
 	<!-- scripts -->
-	<script src="features/cypress.retrieval.min.js?ver=2.1.1"></script>
+	<script src="features/cypress.retrieval.min.js?ver=2.1.2"></script>
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
@@ -104,6 +104,7 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2015-12-20] [v2.1.2] コピーボタンが動作しなかった不具合修正</li>
 							<li>[2015-12-16] [v2.1.1] グレード 23 装備品への対応およびレベル上限を 80 に引き上げ</li>
 							<li>[2015-11-06] [v2.1.0] 付与許容値の表示</li>
 							<li>[2015-11-06] [v2.0.0] エンチャントシステム実装によるデータベース改修</li>
