--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<!-- scripts -->
 <!--
-	<script src="features/cypress.retrieval.min.js?ver=2.1.3"></script>
+	<script src="features/cypress.retrieval.min.js?ver=2.1.4"></script>
 -->
 	<script src="features/jquery.min.js"></script>
 	<script src="features/slidebars.min.js"></script>
@@ -114,6 +114,7 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2016-04-19] [v2.1.4] 品質によるソートがうまくいかなかった不具合修正</li>
 							<li>[2016-03-29] [v2.1.3] グレード 24 装備品への対応および銃 +10 の装填性能データ適用</li>
 							<li>[2015-12-20] [v2.1.2] コピーボタンが動作しなかった不具合修正</li>
 							<li>[2015-12-16] [v2.1.1] グレード 23 装備品への対応およびレベル上限を 80 に引き上げ</li>
