--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<!-- scripts -->
 <!--
-	<script src="features/cypress.retrieval.min.js?ver=2.1.5"></script>
+	<script src="features/cypress.retrieval.min.js?ver=2.1.6"></script>
 -->
 	<script src="features/jquery.min.js"></script>
 	<script src="features/slidebars.min.js"></script>
@@ -114,10 +114,11 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
-							<li>[2016-07-08] [v2.1.5] 「衣服」という分類はそもそも存在しないため削除</li>
-							<li>[2016-04-19] [v2.1.4] 品質によるソートがうまくいかなかった不具合修正</li>
+							<li>[2016-07-14] [v2.1.6] 装備データをコピーテキストを一部修正 <a href="https://github.com/miramiku/Cypress/issues/101">#101</a></li>
+							<li>[2016-07-08] [v2.1.5] 「衣服」という分類はそもそも存在しないため削除 <a href="https://github.com/miramiku/Cypress/issues/98">#98</a></li>
+							<li>[2016-04-19] [v2.1.4] 品質によるソートがうまくいかなかった不具合修正 <a href="https://github.com/miramiku/Cypress/issues/95">#95</a></li>
 							<li>[2016-03-29] [v2.1.3] グレード 24 装備品への対応および銃 +10 の装填性能データ適用</li>
-							<li>[2015-12-20] [v2.1.2] コピーボタンが動作しなかった不具合修正</li>
+							<li>[2015-12-20] [v2.1.2] コピーボタンが動作しなかった不具合修正 <a href="https://github.com/miramiku/Cypress/issues/89">#89</a></li>
 							<li>[2015-12-16] [v2.1.1] グレード 23 装備品への対応およびレベル上限を 80 に引き上げ</li>
 							<li>[2015-11-06] [v2.1.0] 付与許容値の表示</li>
 							<li>[2015-11-06] [v2.0.0] エンチャントシステム実装によるデータベース改修</li>
