--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<!-- scripts -->
 <!--
-	<script src="features/cypress.retrieval.min.js?ver=2.1.6"></script>
+	<script src="features/cypress.retrieval.min.js?ver=2.1.7"></script>
 -->
 	<script src="features/jquery.min.js"></script>
 	<script src="features/slidebars.min.js"></script>
@@ -114,6 +114,7 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2016-08-02] [v2.1.7] 銃の鍛錬データ追加</li>
 							<li>[2016-07-14] [v2.1.6] 装備データをコピーテキストを一部修正 <a href="https://github.com/miramiku/Cypress/issues/101">#101</a></li>
 							<li>[2016-07-08] [v2.1.5] 「衣服」という分類はそもそも存在しないため削除 <a href="https://github.com/miramiku/Cypress/issues/98">#98</a></li>
 							<li>[2016-04-19] [v2.1.4] 品質によるソートがうまくいかなかった不具合修正 <a href="https://github.com/miramiku/Cypress/issues/95">#95</a></li>
