--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="Wizardry Online の装備品データを検索・抽出するシステムです。また、簡単な装備の鍛錬シミュレート機能などもできます。">
 
 	<!-- scripts -->
-	<script src="features/cypress.retrieval.min.js?ver=2.1.7"></script>
+	<script src="features/cypress.retrieval.min.js?ver=2.1.8"></script>
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
@@ -104,6 +104,7 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2016-09-09] [v2.1.8] グレード 25 装備品への対応および付与許容値の表示変更 <a href="https://github.com/miramiku/Cypress/issues/103">#103</a></li>
 							<li>[2016-08-02] [v2.1.7] 銃の鍛錬データ追加</li>
 							<li>[2016-07-14] [v2.1.6] 装備データをコピーテキストを一部修正 <a href="https://github.com/miramiku/Cypress/issues/101">#101</a></li>
 							<li>[2016-07-08] [v2.1.5] 「衣服」という分類はそもそも存在しないため削除 <a href="https://github.com/miramiku/Cypress/issues/98">#98</a></li>
