--- a/index.html
+++ b/index.html
@@ -11,17 +11,7 @@
 	<meta name="description" content="Wizardry Online の装備品データを検索・抽出するシステムです。また、簡単な装備の鍛錬シミュレート機能などもできます。">
 
 	<!-- scripts -->
-<!--
 	<script src="features/cypress.retrieval.min.js?ver=2.1.9"></script>
--->
-	<script src="features/jquery.min.js"></script>
-	<script src="features/slidebars.min.js"></script>
-	<script src="features/ion.rangeSlider.min.js"></script>
-	<script src="features/colorbox.min.js"></script>
-	<script src="features/icheck.min.js"></script>
-	<script src="features/zeroclipboard.min.js"></script>
-	<script src="features/cypress.core.js"></script>
-	<script src="features/cypress.retrieval.js"></script>
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
@@ -38,7 +28,7 @@
 		</div>
 
 		<div id="logo">
-			<img src="images/cypress-logo-d.png" alt="Cypress">
+			<img src="images/cypress-logo.png" alt="Cypress">
 		</div>
 
 		<div id="usage-button-box" class="control-box buttons">
