fix-outer-access

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						<ul>
 							<li>Document: <a href="https://miramiku.github.io/post/wizon/cypress/">Cypress Docs <img src="images/recollection.png" alt="recollection"></a></li>
 							<li>Ripository: <a href="https://github.com/miramiku/Cypress">miramiku/Cypress <span class="icon">&#xeab4;</span></a></li>
-							<li>Processed Database: <a href="features/equipments.json">equipment.json</a></li>
+							<li>Processed Database: <a href="https://miramiku.github.io/Cypress/features/equipments.json">equipment.json</a></li>
 							<li>Original Database: <a href="https://onedrive.live.com/redir?resid=716b8a626fb713c5!2372&amp;authkey=!AFFFx02yh8Ck5Ss&amp;ithint=file%2cxlsm">equipment.db.xlsm (Read only)</a></li>
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
